if(Boost_UNIT_TEST_FRAMEWORK_FOUND)
  message("Creating tests for EagleLib")
  include(CTest)
  enable_testing()
  SUBDIRLIST(tests "${CMAKE_CURRENT_LIST_DIR}")
  foreach(test ${tests})
    file(GLOB_RECURSE test_srcs "tests/${test}/*.cpp")
      add_executable(${test} ${test_srcs})
      TARGET_LINK_LIBRARIES(${test} MetaObject EagleLib ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
      ADD_DEPENDENCIES(${test} MetaObject EagleLib)
      set_target_properties(${test} PROPERTIES FOLDER Tests/EagleLib)
      
      add_test(${test} ${test})
      if(MSVC)
        CONFIGURE_FILE("tests/Test.vcxproj.user.in" ${CMAKE_BINARY_DIR}/${test}.vcxproj.user @ONLY)
      endif()
  endforeach()
endif()