PROJECT(Gstreamer)
SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_CURRENT_SOURCE_DIR}/CMake")
include(CMake)

SET(PROJECT_INCLUDES)
IF(WIN32)
	FIND_PACKAGE(GStreamerWindows)
	INCLUDE_DIRECTORIES(${GSTREAMER_gst_INCLUDE_DIR})
	INCLUDE_DIRECTORIES(${GSTREAMER_gstconfig_INCLUDE_DIR})
	INCLUDE_DIRECTORIES(${GSTREAMER_glibconfig_INCLUDE_DIR})
	INCLUDE_DIRECTORIES(${GSTREAMER_glib_INCLUDE_DIR})
	LIST(APPEND PROJECT_INCLUDES ${GSTREAMER_gst_INCLUDE_DIR})
	LIST(APPEND PROJECT_INCLUDES ${GSTREAMER_gstconfig_INCLUDE_DIR})
	LIST(APPEND PROJECT_INCLUDES ${GSTREAMER_glibconfig_INCLUDE_DIR})
	LIST(APPEND PROJECT_INCLUDES ${GSTREAMER_glib_INCLUDE_DIR})

ELSE(WIN32)

	FIND_PACKAGE(Gstreamer)

	FIND_PACKAGE(PkgConfig)
	pkg_search_module(GLIB2 glib-2.0)

	if(GLIB2_FOUND)

		INCLUDE_DIRECTORIES(${GSTREAMER_gst_INCLUDE_DIR})
		INCLUDE_DIRECTORIES(${GSTREAMER_gstconfig_INCLUDE_DIR})
		INCLUDE_DIRECTORIES(${Glib_INCLUDE_DIR})
		INCLUDE_DIRECTORIES("/usr/lib/x86_64-linux-gnu/glib-2.0/include")
	ENDIF(GLIB2_FOUND)
ENDIF(WIN32)

IF(GSTREAMER_gst_INCLUDE_DIR)
	FILE(GLOB_RECURSE src "src/*.cpp")
	FILE(GLOB_RECURSE hdr "src/*.hpp")
	INCLUDE_DIRECTORIES(${INCLUDE_DIRS})
	LINK_DIRECTORIES(${LINK_DIRS})
	STRING(REGEX REPLACE ";" "+" PROJECT_INCLUDES "${PROJECT_INCLUDES}" )
	ADD_DEFINITIONS(-DPROJECT_INCLUDES="${PROJECT_INCLUDES}")
	GET_FILENAME_COMPONENT(LIB_DIR "${GSTREAMER_gstapp_LIBRARY}" DIRECTORY)


	ADD_DEFINITIONS(-DPROJECT_LIB_DIRS="${LIB_DIR}")
	ADD_LIBRARY(Gstreamer SHARED ${src} ${hdr})
	TARGET_LINK_LIBRARIES(Gstreamer
		EagleLib
		#${LINK_LIBS}
		${GSTREAMER_gstapp_LIBRARY}
		${GSTREAMER_gstaudio_LIBRARY}
		${GSTREAMER_gstbase_LIBRARY}
		${GSTREAMER_gstcontroller_LIBRARY}
		${GSTREAMER_gstnet_LIBRARY}
		${GSTREAMER_gstpbutils_LIBRARY}
		${GSTREAMER_gstreamer_LIBRARY}
		${GSTREAMER_gstriff_LIBRARY}
		${GSTREAMER_gstrtp_LIBRARY}
		${GSTREAMER_gstrtsp_LIBRARY}
		${GSTREAMER_gstsdp_LIBRARY}
		${GSTREAMER_gsttag_LIBRARY}
		${GSTREAMER_gstvideo_LIBRARY}
		${Glib_LIBRARY}
		${GLIB_LIBRARY}
		${GOBJECT_LIBRARY}
	)
	ADD_DEPENDENCIES(Gstreamer EagleLib)
ENDIF()